# Sudriv

./: .env.example  .gitignore  DEPLOY.md  README.md  TESTING.md  package.json  pnpm-lock.yaml  tree.txt  turbo.json
apps/agent/: .env.example  Dockerfile  Procfile  README.md  color.py  main.py  pyproject.toml  railway.toml
apps/agent/agent/: __init__.py  confirmation.py  llm_clients.py  pipeline.py  prompts.py  session.py  tools.py
apps/agent/agent/plugins/: __init__.py  sarvam_stt.py  sarvam_tts.py
apps/web/: .env.example  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(dashboard)/: layout.tsx
apps/web/components/anchor/: anchor-panel.tsx  instruction-card.tsx
apps/web/components/auth/: login-form.tsx
apps/web/components/layout/: header.tsx
apps/web/hooks/: use-anchor-instructions.ts  use-livekit.ts  use-proposals.ts  use-running-order.ts  use-session.ts
apps/web/lib/: constants.ts  utils.ts
apps/web/scripts/: seed-news.js  seed.js
apps/web/types/: database.ts  session.ts  timeline.ts  voice.ts
docs/: DECISIONS.md  TECHNICAL_ARCHITECTURE.md
knowledge-base/: 00-project-overview.md  01-product-vision-and-goals.md  02-user-flows-mvp.md  03-system-architecture.md  04-data-models.md  05-voice-agent-design.md  06-tools-and-function-calling.md  07-frontend-architecture.md  08-backend-and-realtime.md  09-language-and-voice-pipeline.md  10-mvp-scope-and-demo-mode.md  11-technical-decisions-and-tradeoffs.md  12-future-roadmap.md  README.md
(+37 files in other folders)
